Fix old community signup tests

--- a/home/templates/home/community_participation_rules.html
+++ b/home/templates/home/community_participation_rules.html
@@ -33,5 +33,5 @@ Community participation rules
 
 <p>Projects must be <a href="{% url 'docs-community' %}#licensing-requirements">licensed as open source</a>. Projects must further free software, and <a href="{% url 'docs-community' %}#commercial-ties">not be tied to proprietary software.</a></p>
 
-<p><a class='btn btn-success' href="{% url 'community-add' %}">Submit a New Community</a></p>
+<p><a class='btn btn-success' href="{% url 'community-add' %}">Submit community application</a></p>
 {% endblock content %}
