Add link to general funding documentation to funding snippet

--- a/home/templates/home/snippet/funding_short_description.html
+++ b/home/templates/home/snippet/funding_short_description.html
@@ -2,6 +2,6 @@
 
 {% comment %}Point coordinators to resources for finding and pitching to sponsors, once the community guide exists.{% endcomment %}
 
-<p>Humanitarian open source communities are invited to apply to the Outreachy general fund. If your community is approved, Outreachy will fully fund at least one intern. Outreachy is especially interested in funding humanitarian projects involving climate change, infectious diseases, and mental health.</p>
+<p>Humanitarian open source communities are invited to apply to the <a href="{% url 'docs-community' %}#outreachy-general-fund" %}>Outreachy general fund</a>. If your community is approved, Outreachy will fully fund at least one intern. Outreachy is especially interested in funding humanitarian projects involving climate change, infectious diseases, and mental health.</p>
 
 <p>Both humanitarian and non-humanitarian communities can apply to receive <a href='{% url 'docs-community' %}#outreachy-general-fund'>additional funding for interns</a>.</p>
