Change layout of general funding form to encourage more input.
A community signed up, wanting to use Outreachy general funding, but
didn't fill out the general funding application form. I believe they
didn't read the instruction and clicked the skip button at the top of
the page.

Remove the skip button all together, and tell communities to leave the
form blank if they are not applying to the Outreachy general fund.

--- a/home/templates/home/general_funding_application.html
+++ b/home/templates/home/general_funding_application.html
@@ -9,11 +9,10 @@ Outreachy general funding application
 <form action="" method="post">
 	<h1>Outreachy general fund application</h1>
 
-	<p>If your community is not applying for Outreachy general funding, please skip this step. Otherwise, please fill out the application below.</p>
+	<p>If your community is applying for Outreachy general funding, please fill out the application below.</p>
 
-	<div class="mb-5">
-		<input class="btn btn-secondary" type="submit" value="Skip" />
-	</div>
+	<p>If your community is not applying for Outreachy general funding, please leave the form blank.</p>
+
 	<hr>
 
 	<h1>Outreachy general fund rules</h1>
