Revamp communities navigation bar.
Every time I look at the list of links to the community CFP page in the
navigation bar, I get confused. Make the links more person-oriented
(e.g. "Mentor sign-up") than action oriented ("Add a project").

Hopefully this will help mentors not get confused about how to sign up,
and it will prevent applicants from accidentally finding the CFP page.

--- a/outreachyhome/templates/partials/_navigation.html
+++ b/outreachyhome/templates/partials/_navigation.html
@@ -23,13 +23,10 @@
     <div class="dropdown-menu" aria-labelledby="navbarCommunities">
       <a class="dropdown-item" href="{% url 'docs-community' %}">Community Guide</a>
       <a class="dropdown-item" href="/mentor/">Volunteering FAQ</a>
+      <a class="dropdown-item" href="{% url 'community-cfp' %}">Community Sign-up</a>
+      <a class="dropdown-item" href="{% url 'community-cfp' %}">Mentor Sign-up</a>
       <a class="dropdown-item" href="{% url 'dashboard' %}">My Mentored Projects</a>
-      <a class="dropdown-item" href="{% url 'community-cfp' %}">Add A Community</a>
-      <a class="dropdown-item" href="{% url 'community-cfp' %}#mentor">Submit A Project</a>
-      <a class="dropdown-item" href="{% url 'community-cfp' %}#mentor">Co-mentor A Project</a>
-      <a class="dropdown-item" href="{% url 'project-selection' %}">Current Projects</a>
-      <a class="dropdown-item" href="{% url 'past-rounds' %}">Past Projects</a>
-      <a class="dropdown-item" href="/promote/">Promote Outreachy</a>
+      <a class="dropdown-item" href="{% url 'project-selection' %}">All Projects</a>
     </div>
   </li>
 
