DRAFT: Placeholder text for internet censorship prep documentation
One of the Outreachy interns lives in a country where the government
censored the internet. The government blocked social media, the Tor
website, GitHub, and GitLab. This made it impossible for the intern to
work on their project.

Add placeholder sections to the internship guide that talk about how to
debug and circumvent internet censorship. Discussion of what to put in
those sections is still TBD.

--- a/home/templates/home/docs/internship_guide.html
+++ b/home/templates/home/docs/internship_guide.html
@@ -24,6 +24,7 @@ Internship Guide | Outreachy Documentation
 	</li>
 	<li><a href='#blogging-faq'>Blogging FAQ</a></li>
 	<li><a href='#chats'>Chats with interns, mentors, and alums</a>
+	<li><a href='#internet-censorship-prep'>Internet Censorship Preparedness</a></li>
 </ol>
 
 <hr>
@@ -279,6 +280,13 @@ Internship Guide | Outreachy Documentation
 		</table>
 	{% endwith %}
 {% endif %}
+
+<p><a href='#toc'><u>↑ table of contents</u></a></p>
+<hr>
+
+<h2 id='internet-censorship-prep'><a href='#internet-censorship-prep'>Internet Censorship Preparedness</a></h2>
+
+<p>TBD</p>
 
 <p><a href='#toc'><u>↑ table of contents</u></a></p>
 <hr>
