Docs: Add commonly asked questions to applicant guide.
Answer commonly asked questions:

1. How experienced do I need to be?
2. Do I have to be a programmer to apply?
3. Do you have X type of project?

--- a/home/templates/home/docs/applicant_guide.html
+++ b/home/templates/home/docs/applicant_guide.html
@@ -15,6 +15,9 @@ Applicant Guide | Outreachy Documentation
 <a href='#what-is-outreachy'>What is Outreachy?</a><br>
 <a href='#what-is-free-software'>What is free software and open source?</a></br>
 <a href='#eligibility'>Eligibility</a><br>
+<a href='#am-i-experienced-enough'>Am I experienced enough?</a><br>
+<a href='#non-programming-projects'>Do I have to be a programmer to apply?</a></br>
+<a href='#project-types'>Do you have the type of project I'm interested in?</a></br>
 <a href='#outreachy-schedule'>Outreachy schedule</a><br>
 <a href='#application-period'>Application period overview</a><br>
 <a href="#initial-application">Initial application</a><br>
@@ -61,6 +64,64 @@ Applicant Guide | Outreachy Documentation
 <p>These eligibility rules apply to the {{ current_round.official_name }} round. Dates may change for future rounds.</p>
 
 {% include 'home/snippet/eligibility_rules.html' %}
+
+<p><a href='#toc'><u>↑ table of contents</u></a></p>
+<hr>
+<h2 id='am-i-experienced-enough'><a href='#am-i-experienced-enough'>Am I experienced enough?</a></h2>
+
+<p>Outreachy organizers often get questions from applicants like:</p>
+
+<div class="container ml-3">
+
+<p><i>"I'm a second year university student. I have done some projects in X programming language. Am I experienced enough for this internship?"</i></p>
+
+<p><i>"I'm learning Y through online courses. But I haven't worked on a big project with those skills. Am I experienced enough for this internship?"</i></p>
+
+</div>
+
+<p>The answer is <b>"You should fill out an initial application, regardless of your experience level."</b></p>
+
+<p>Outreachy has many different internship projects. Each project will have different skill requirements. It is likely there will be at least one project that fits your skills.</p>
+
+<h3 id='project-skill-preferences'><a href='#project-skill-preferences'>Project skill preferences</a></h3>
+
+<p>Each project will list the required, preferred, and bonus skills:</p>
+
+{% include 'home/snippet/skill_preference_key.html' %}
+
+<p>When deciding whether to apply to a project, you should focus on looking at the required skills. If you have experience in at least 1 or 2 required skills for a project, you are welcome to apply to it. If you do not have the preferred or bonus skills, it is okay to apply. However, if another applicant has the preferred skills, they may be selected over you.</p>
+
+<p>Applicants show mentors they have the required project skills by completing project tasks during the contribution period. You are more likely to be accepted as an intern if you <a href="#make-contributions">make high-quality contributions</a>.</p>
+
+<p><a href='#toc'><u>↑ table of contents</u></a></p>
+<hr>
+<h2 id='non-programming-projects'><a href='#non-programming-projects'>Do I have to be a programmer to apply?</a></h2>
+
+<p>No, you do not need to be a programmer to apply to Outreachy. Some Outreachy projects are focused on non-programming work. Those projects may involve design, documentation, user experience, marketing, or event planning.</p>
+
+<p>However, the majority of Outreachy projects will require that you have some programming skills. You will need experience programming to apply for those projects.</p>
+
+<p>Sometimes mentors are willing to teach you a new programming language if you know at least one other programming language. Check the project skills list for an experience level listing of '1 - No knowledge required'.</p>
+
+<p><a href='#toc'><u>↑ table of contents</u></a></p>
+<hr>
+<h2 id='project-types'><a href='#project-types'>Do you have the type of project I'm interested in?</a></h2>
+
+<p>Some applicants are looking for a specific type of project. They may want to find a project that fits their current skills. Or they may want to find a project that will challenge them to learn new skills.</p>
+
+<p>Outreachy organizers often get asked:</p>
+
+<div class="container ml-3">
+
+<p><i>"I'm interested in internships involving X. Will you have internship projects involving X?"</i></p>
+
+<p><i>"I know Y programming language. Will you have Y internship projects?"</i></p>
+
+</div>
+
+<p>The answer is <b>"You should fill out an initial application, regardless of whether you see a project you're interested in."</b></p>
+
+<p>Some applicants want to wait until a project appears on the <a href="{% url 'project-selection' %}">project list</a> before they fill out an initial application. However, mentors often list their project after the initial application deadline. It's important you fill out an initial application, even if you don't see a project you're interested in.</p>
 
 <p><a href='#toc'><u>↑ table of contents</u></a></p>
 <hr>
