--- a/home/templates/home/round_page_with_communities.html
+++ b/home/templates/home/round_page_with_communities.html
@@ -65,7 +65,7 @@ Outreachy Internships | Apply | Pick a Project
 			</p>
 
 			<p class="card-text">
-			<b>Experience level:</b> You don't need to be an expert to apply.
+			<b>Experience level:</b> You do not need to be an expert to apply.
 			Each project will need a different skill experience level:
 			</p>
 			<table class="table">
@@ -82,20 +82,7 @@ Outreachy Internships | Apply | Pick a Project
 			Each project skill will be listed as:
 			</p>
 
-			<table class="table">
-				<tr>
-					<td>Required</td>
-					<td>Mentors will only select you as an intern if you have this skill</td>
-				</tr>
-				<tr>
-					<td>Preferred</td>
-					<td>Mentors prefer to select an intern who has this skill, but they may select you if you don't have this skill</td>
-				</tr>
-				<tr>
-					<td>Nice to have</td>
-					<td>Mentors will select you, even if you don't have this skill</td>
-				</tr>
-			</table>
+			{% include 'home/snippet/skill_preference_key.html' %}
 
 			<p>If you're unsure whether you have the project skills needed, reach out the mentor via email and ask them. It's better to ask than to not apply!</p>
 		</div>
