Make Twitter #OutreachyChat instructions more clear.
 - Use the term "past interns" instead of "alums"
 - Make it clear applicants can ask questions
 - Remove the manual timezone conversions, as they are wrong during the
   December round Twitter chat
 - Add a link to the Outreachy Twitter account
 - Use simpler sentences in chat instructions

--- a/home/templates/home/promote.html
+++ b/home/templates/home/promote.html
@@ -85,25 +85,29 @@ Promote Outreachy internships
 
 <h1 id="outreachychat">#OutreachyChat</h1>
 
-<p>Each round, Outreachy has a Twitter chat to introduce the program. We have questions for both mentors and alums. Potential Outreachy applicants are encouraged to ask questions of mentors and alums during and after the chat.</p>
+<p>Each round, Outreachy has a Twitter chat to introduce the program. We encourage questions from people interested in applying to Outreachy. We also pose questions for mentors and past Outreachy interns to answer. Applicants are encouraged to ask mentors and past interns questions during and after the chat.</p>
 
 {% if current_round %}
-<p>The next #OutreachyChat will be on {{ current_round.outreachy_chat }} UTC / 8 am PDT / 11 pm EDT / 5 pm CET / 9:30 pm IST.</p>
+	<p>The next #OutreachyChat will happen on {{ current_round.outreachy_chat }} UTC.</p>
 {% else %}
-<p>The next #OutreachyChat is not scheduled yet. It's typically run two weeks after the initial application period opens, on a Monday at 4pm UTC / 8am PDT / 11pm EDT / 5pm CET / 9:30pm IST.</p>
+	<p>The next #OutreachyChat is not scheduled yet. It's typically run two weeks after the initial application period opens, on a Monday at 4pm UTC / 8am PDT / 11pm EDT / 5pm CET / 9:30pm IST.</p>
 {% endif %}
 
-<p>Here is how the chat will work for mentors and alums:</p>
+<p>Here is how the chat will work for applicants, mentors, and past interns:</p>
 
-<p>The Outreachy organizers will be tweeting from @outreachy account and will pose the questions below with an interval of 5-10 minutes between questions. The questions are prefaced with Q1, Q2, and so on, and correspondingly, you will need to reply with A1, A2, and so on in your answers. You will also need to use the hashtag #OutreachyChat in all your tweets related to the chat.</p>
+<p>The Outreachy organizers will be tweeting from the <a href="https://www.twitter.com/Outreachy/">@outreachy Twitter account</a>. Outreachy organizers will pose the questions below. Applicants, mentors, and past interns will answer. Outreachy organizers will wait about 5-10 minutes between questions.</p>
+
+<p>The questions are prefaced with Q1, Q2, etc. You will need to reply with A1, A2, at the start of you answer. Please also use the hashtag #OutreachyChat in all your tweets related to the chat.</p>
 
 <p>The following questions are used for the chat:</p>
 
-<p>Q1: For perspective applicants: What questions do you have for mentors, alums, or organizers? #OutreachyChat</p>
-<p>Q2: For alums and mentors: Please introduce yourself. What community (did you intern with/are you mentoring for)? #OutreachyChat</p>
-<p>Q3: For alums and mentors: What do you love about participating in Outreachy? #OutreachyChat</p>
+<p>Q1: For perspective applicants: What questions do you have for mentors, past interns, or organizers? #OutreachyChat</p>
+<p>Q2: For past interns and mentors: Please introduce yourself. What community (did you intern with/are you mentoring for)? #OutreachyChat</p>
+<p>Q3: For past interns and mentors: What do you love about participating in Outreachy? #OutreachyChat</p>
 <p>Q4: For mentors: What is the project you are mentoring? What skills do people need to apply? What skills can they learn from you? #OutreachyChat</p>
-<p>Q4: For alums: What community did you intern with? What was your project? What did you learn during the internship? #OutreachyChat</p>
-<p>Q5: For alums and mentors: What is the Outreachy application process like? Do you have advice for applicants on how to stand out? #OutreachyChat</p>
+<p>Q4: For past interns: What community did you intern with? What was your project? What did you learn during the internship? #OutreachyChat</p>
+<p>Q5: For past interns and mentors: What is the Outreachy application process like? Do you have advice for applicants on how to stand out? #OutreachyChat</p>
+
+<p>Mentors and past interns are encouraged to monitor the #OutreachyChat hashtag. This is especially helpful during the first question. If you see an applicant ask a question that you know the answer to, please answer it! This can help the Outreachy organizers who are running the chat answer all applicant questions.</p>
 
 {% endblock %}
