Add URL for timezone conversions for the Outreachy Twitter chat.
Store a URL that encodes a timezone conversion for the start time of the
Outreachy Twitter chat.

We typically use this site:

https://www.timeanddate.com/worldclock/converter.html?p1=137&p2=179&p3=1440&p4=233&p5=125&p6=267&p7=141&p8=53&p9=367&p10=176&p11=236&p12=22

Todo: That URL has a nice API format for encoding the time and date, and
timezones we want to include. It would be good to generate that URL
programmatically for all date and times (e.g. the intern announcement).

At the same time, it's a proprietary site, so there's no guarantee it
will stick around. It would be good to research other open source
libraries that we could use to display our own timezone conversion page.

--- a/home/templates/home/promote.html
+++ b/home/templates/home/promote.html
@@ -88,7 +88,7 @@ Promote Outreachy internships
 <p>Each round, Outreachy has a Twitter chat to introduce the program. We encourage questions from people interested in applying to Outreachy. We also pose questions for mentors and past Outreachy interns to answer. Applicants are encouraged to ask mentors and past interns questions during and after the chat.</p>
 
 {% if current_round %}
-	<p>The next #OutreachyChat will happen on {{ current_round.outreachy_chat }} UTC.</p>
+	<p>The next #OutreachyChat will happen on {{ current_round.outreachy_chat }} UTC. Please double check <a href="{{ current_round.outreachy_chat_timezone_url }}">what time that is in your timezone</a>.</p>
 {% else %}
 	<p>The next #OutreachyChat is not scheduled yet. It's typically run two weeks after the initial application period opens, on a Monday at 4pm UTC / 8am PDT / 11pm EDT / 5pm CET / 9:30pm IST.</p>
 {% endif %}
