Move Twitter chat instructions into a Django HTML snippet file

--- a/home/templates/home/promote.html
+++ b/home/templates/home/promote.html
@@ -95,18 +95,7 @@ Promote Outreachy internships
 
 <p>Here is how the chat will work for applicants, mentors, and past interns:</p>
 
-<p>The Outreachy organizers will be tweeting from the <a href="https://www.twitter.com/Outreachy/">@outreachy Twitter account</a>. Outreachy organizers will pose the questions below. Applicants, mentors, and past interns will answer. Outreachy organizers will wait about 5-10 minutes between questions.</p>
-
-<p>The questions are prefaced with Q1, Q2, etc. You will need to reply with A1, A2, at the start of you answer. Please also use the hashtag #OutreachyChat in all your tweets related to the chat.</p>
-
-<p>The following questions are used for the chat:</p>
-
-<p>Q1: For perspective applicants: What questions do you have for mentors, past interns, or organizers? #OutreachyChat</p>
-<p>Q2: For past interns and mentors: Please introduce yourself. What community (did you intern with/are you mentoring for)? #OutreachyChat</p>
-<p>Q3: For past interns and mentors: What do you love about participating in Outreachy? #OutreachyChat</p>
-<p>Q4: For mentors: What is the project you are mentoring? What skills do people need to apply? What skills can they learn from you? #OutreachyChat</p>
-<p>Q4: For past interns: What community did you intern with? What was your project? What did you learn during the internship? #OutreachyChat</p>
-<p>Q5: For past interns and mentors: What is the Outreachy application process like? Do you have advice for applicants on how to stand out? #OutreachyChat</p>
+{% include 'home/snippet/twitter_chat_instructions.html' %}
 
 <p>Mentors and past interns are encouraged to monitor the #OutreachyChat hashtag. This is especially helpful during the first question. If you see an applicant ask a question that you know the answer to, please answer it! This can help the Outreachy organizers who are running the chat answer all applicant questions.</p>
 
