Change internship stipend on promote page to reflect temporary COVID-19 policies

--- a/home/templates/home/promote.html
+++ b/home/templates/home/promote.html
@@ -34,20 +34,20 @@ Promote Outreachy internships
 
 {% comment %}This template is passed current_round from the date when the community CFP opens and before the initial application deadline has passed.{% endcomment %}
 {% if current_round and not current_round.initial_applications_open.has_passed %}
-<p>Please RT: Outreachy internships are remote, paid ($5,500 stipend), and last three months. Outreachy supports diversity in free and open source software! Initial applications for the @outreachy {{ current_round.internstarts|date:'M Y' }} to {{ current_round.internends|date:'M Y' }} internships will open on {{ current_round.initial_applications_open|date:'M d' }}: https://www.outreachy.org/apply/</p>
+<p>Please RT: Outreachy internships are remote, paid ($6,000 stipend), and last three months. Outreachy supports diversity in free and open source software! Initial applications for the @outreachy {{ current_round.internstarts|date:'M Y' }} to {{ current_round.internends|date:'M Y' }} internships will open on {{ current_round.initial_applications_open|date:'M d' }}: https://www.outreachy.org/apply/</p>
 {% elif current_round %}
-<p>Please RT: Outreachy internships are remote, paid ($5,500 stipend), and last three months. Outreachy supports diversity in free and open source software! Initial applications for the @outreachy {{ current_round.internstarts|date:'M Y' }} to {{ current_round.internends|date:'M Y' }} internships are due on {{ current_round.initial_applications_close|date:'M d' }} at 4pm UTC: https://www.outreachy.org/apply/</p>
+<p>Please RT: Outreachy internships are remote, paid ($6,000 stipend), and last three months. Outreachy supports diversity in free and open source software! Initial applications for the @outreachy {{ current_round.internstarts|date:'M Y' }} to {{ current_round.internends|date:'M Y' }} internships are due on {{ current_round.initial_applications_close|date:'M d' }} at 4pm UTC: https://www.outreachy.org/apply/</p>
 {% else %}
-<p>Please RT: Outreachy internships are remote, paid ($5,500), and last three months. Outreachy supports diversity in free and open source software! Outreachy internships run from May to August and December to March. Applications open in January and August: https://www.outreachy.org/apply/</p>
+<p>Please RT: Outreachy internships are remote, paid ($6,000), and last three months. Outreachy supports diversity in free and open source software! Outreachy internships run from May to August and December to March. Applications open in January and August: https://www.outreachy.org/apply/</p>
 {% endif %}
 
 <p>Follow up tweets:</p>
 
-<p>Outreachy expressly invites applicants from around the world who are women (both cis and trans), trans men, and genderqueer people. Apply for our internships, which are completely remote, paid ($5,500 stipend), and last three months. https://www.outreachy.org/apply/</p>
+<p>Outreachy expressly invites applicants from around the world who are women (both cis and trans), trans men, and genderqueer people. Apply for our internships, which are completely remote, paid ($6,000 stipend), and last three months. https://www.outreachy.org/apply/</p>
 
 <p>Outreachy also expressly invites applications from U.S. residents and nationals of any gender who are Black/African American, Hispanic/Latinx, Native American/American Indian, Alaska Native, Native Hawaiian, or Pacific Islander. https://www.outreachy.org/apply/</p>
 
-<p>Outreachy expressly invites applicants from around the world who face under-representation, systemic bias or discrimination in the technology industry of their country. Apply for our internships, which are completely remote, paid ($5,500 stipend), and last three months. https://www.outreachy.org/apply/</p>
+<p>Outreachy expressly invites applicants from around the world who face under-representation, systemic bias or discrimination in the technology industry of their country. Apply for our internships, which are completely remote, paid ($6,000 stipend), and last three months. https://www.outreachy.org/apply/</p>
 
 <h2>Email</h2>
 
@@ -57,7 +57,7 @@ Promote Outreachy internships
 
 <p>Outreachy internships run twice a year. The internships run from May to August and December to March.</p>
 
-<p>Interns are paid a stipend of $5,500 USD for the three months of work. They also have a $500 USD stipend to travel to conferences and events.</p>
+<p>Interns are paid a stipend of $6,000 USD for the three months of work.</p>
 
 <p>Outreachy internships are completely remote. Outreachy internships are open to applicants around the world. Interns work remotely with experienced mentors.</p>
 
